loader + fix responsive wrap

--- a/src/assets/s3d/styles/s3d.scss
+++ b/src/assets/s3d/styles/s3d.scss
@@ -384,6 +384,7 @@
     &__complex{
       justify-content: center;
       align-items: center;
+      overflow: hidden;
     }
 
     //&__apart{
